--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.291.0",
+    "mongoose": "^8.0.2",
     "mongose": "^0.0.2-security",
     "next": "14.0.1",
     "react": "^18",
